# CHIP-8-Emulator

./: CMakeLists.txt  README.md
src/: main.c
